tests/baselines/reference/instanceofTypeAliasToGenericClass.errors.txt
tests/cases/compiler/instanceofTypeAliasToGenericClass.ts(8,12): error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.


==== tests/cases/compiler/instanceofTypeAliasToGenericClass.ts (1 errors) ====
    declare class TableClass<S = any> {
        _field: S;
    }
    
    export type Table = TableClass;
    
    function fn<T extends Table>(o: T) {
        return o instanceof TableClass;
               ~
!!! error TS2358: The left-hand side of an 'instanceof' expression must be of type 'any', an object type or a type parameter.
    }
    
    function fn2<T extends TableClass>(o: T) {
        return o instanceof TableClass;
    }
    
    declare const o: Table;
    o instanceof TableClass;
    